:card_file_box: Terms, TermsLog 엔티티 추가, 개인정보 처리방침 껍데기 html 추가

--- a/src/main/resources/templates/terms_of_service_1.html
+++ b/src/main/resources/templates/terms_of_service_1.html
@@ -1,10 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="ko">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <style>.lst-kix_6wx3b52nmquy-0 > li:before {
+    <title>이용약관</title>
+    <style>
+    .lst-kix_6wx3b52nmquy-0 > li:before {
         content: "\0025cf  "
     }
 
@@ -948,7 +950,8 @@
         orphans: 2;
         widows: 2;
         text-align: left
-    }</style>
+    }
+    </style>
 </head>
 <body class="c15"><p class="c10"><span class="c5">&#51228;1&#51109; &#52509;&#52825;</span></p>
 <p class="c10"><span class="c0">&nbsp;</span></p>
