--- a/src/main/resources/templates/terms_of_service_1.html
+++ b/src/main/resources/templates/terms_of_service_1.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>이용약관</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/static/css/reset.css}"/>
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/static/css/reset.css}"/>-->
 <style>
 body {
     max-width: 451.4pt;
@@ -23,15 +22,24 @@ h2 {
 hr {
     border: none;
 }
+strong {
+    display: block;
+    font-weight: 700;
+    margin: 10px 0;
+}
+div {
+    margin: 10px 0;
+}
 </style>
 </head>
 <body>
 <h2>제1장 총칙</h2>
-<p>
-    <strong>제1조 (목적)</strong> 이 약관은 책킹(이하 “회사”라 합니다)이 모바일 기기를 통해 제공하는 서비스 및 이에 부수하는 네트워크, 웹사이트, 기타 서비스(이하 “서비스”라 합니다)의
+<div>
+    <strong>제1조 (목적)</strong> 
+    이 약관은 책킹(이하 “회사”라 합니다)이 모바일 기기를 통해 제공하는 서비스 및 이에 부수하는 네트워크, 웹사이트, 기타 서비스(이하 “서비스”라 합니다)의
     이용에 대한 회사와 서비스 이용자의 권리ㆍ의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.
-</p>
-<p>
+</div>
+<div>
     <strong>제2조 (용어의 정의)</strong>
 <ol>
     <li>이 약관에서 사용하는 용어의 정의는 다음과 같습니다.
@@ -53,8 +61,8 @@ hr {
     </li>
     <li>이 약관에서 사용하는 용어의 정의는 본 조 제1항에서 정하는 것을 제외하고는 관계법령 및 서비스별 정책에서 정하는 바에 의하며, 이에 정하지 아니한 것은 일반적인 상 관례에 따릅니다.</li>
 </ol>
-</p>
-<p>
+</div>
+<div>
     <strong>제3조 (회사정보 등의 제공)</strong>
     회사는 다음 각 호의 사항을 회원이 알아보기 쉽도록 게임 서비스 내에 표시합니다. 다만, 개인정보처리방침과 약관은 회원이 연결화면을 통하여 볼 수 있도록 할 수 있습니다.
     <ol>
@@ -66,8 +74,8 @@ hr {
         <li>개인정보처리방침</li>
         <li>서비스 이용약관</li>
     </ol>
-</p>
-<p>
+</div>
+<div>
     <strong>제4조 (약관의 효력 및 변경)</strong>
     <ol>
         <li>회사는 이 약관의 내용을 회원이 알 수 있도록 게임서비스 내 또는 그 연결화면에 게시합니다. 이 경우 이 약관의 내용 중 서비스 중단, 청약철회, 환급, 계약 해제․해지, 회사의 면책사항 등과 같은
@@ -86,8 +94,8 @@ hr {
             법령에 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
         </li>
     </ol>
-</p>
-<p>
+</div>
+<div>
     <strong>제5조 (이용계약의 체결 및 적용)</strong>
     <ol>
         <li>이용계약은 회원이 되고자 하는 자(이하 “가입신청자”라 합니다.)가 이 약관의 내용에 대하여 동의를 한 다음 서비스 이용 신청을 하고, 회사가 그 신청에 대해서 승낙함으로써 체결됩니다.</li>
@@ -110,12 +118,12 @@ hr {
             </ol>
         </li>
     </ol>
-</p>
-<p>
+</div>
+<div>
     <strong>제6조 (약관 외 준칙) </strong>
     이 약관에서 정하지 아니한 사항과 이 약관의 해석에 관하여는 「전자상거래 등에서의 소비자보호에 관한 법률」,「약관의 규제에 관한 법률」,「게임산업진흥에 관한 법률」,「정보통신망이용촉진 및 정보보호 등에 관한 법률」,「콘텐츠산업진흥법」 등 관련 법령 또는 상 관례에 따릅니다.
-</p>
-<p>
+</div>
+<div>
     <strong>제7조 (운영정책)</strong>
     회사는 다음 각 호의 사항을 회원이 알아보기 쉽도록 게임 서비스 내에 표시합니다. 다만, 개인정보처리방침과 약관은 회원이 연결화면을 통하여 볼 수 있도록 할 수 있습니다.
     <ol>
@@ -128,12 +136,12 @@ hr {
             <li>운영정책의 내용이 약관에서 정한 내용과 근본적으로 다르지 않고 회원이 예측할 수 있는 범위 내에서 운영정책을 개정하는 경우</li>
         </ol>
     </ol>
-</p>
+</div>
 
 <hr>
 
 <h2>제2장 개인정보 관리</h2>
-<p>
+<div>
     <strong>제8조 (개인정보의 보호 및 사용)</strong>
     <ol>
         <li>회사는 관련 법령이 정하는 바에 따라 회원의 개인정보를 보호하기 위해 노력하며, 개인정보의 보호 및 사용에 대해서는 관련 법령 및 회사의 개인정보처리방침에 따릅니다. 다만, 회사가 제공하는 서비스 이외의 링크된 서비스에서는 회사의 개인정보처리방침이 적용되지 않습니다.</li>
@@ -141,20 +149,20 @@ hr {
         <li>회사는 관련 법령에 의해 관련 국가기관 등의 요청이 있는 경우를 제외하고는 회원의 개인정보를 본인의 동의 없이 타인에게 제공하지 않습니다.</li>
         <li>회사는 회원의 귀책사유로 개인정보가 유출되어 발생한 피해에 대하여 책임을 지지 않습니다.</li>
     </ol>
-</p>
+</div>
 
 <hr>
 
 <h2>제3장 이용계약 당사자의 의무</h2>
-<p>
+<div>
     <strong>제9조 (회사의 의무)</strong>
     <ol>
         <li>회사는 관련 법령, 이 약관에서 정하는 권리의 행사 및 의무의 이행을 신의에 따라 성실하게 준수합니다.</li>
         <li>회사는 회원이 안전하게 서비스를 이용할 수 있도록 개인정보(신용정보 포함)보호를 위해 보안시스템을 갖추어야 하며 개인정보처리방침을 공시하고 준수합니다. 회사는 이 약관 및 개인정보처리방침에서 정한 경우를 제외하고는 회원의 개인정보가 제3자에게 공개 또는 제공되지 않도록 합니다.</li>
         <li>회사는 계속적이고 안정적인 서비스의 제공을 위하여 서비스 개선을 하던 중 설비에 장애가 생기거나 데이터 등이 멸실․훼손된 때에는 천재지변, 비상사태, 현재의 기술로는 해결이 불가능한 장애나 결함 등 부득이한 사유가 없는 한 지체 없이 이를 수리 또는 복구하도록 최선의 노력을 다합니다.</li>
     </ol>
-</p>
-<p>
+</div>
+<div>
     <strong>제10조 (회원의 의무)</strong>
 <ol>
     <li>회원은 회사에서 제공하는 서비스의 이용과 관련하여 다음 각 호에 해당하는 행위를 해서는 안 됩니다.
@@ -185,21 +193,21 @@ hr {
         </ol>
     </li>
 </ol>
-</p>
+</div>
 
 <hr>
 
 <h2>제4장 서비스 이용 및 이용제한</h2>
-<p>
+<div>
     <strong>제11조 (서비스의 제공)</strong>
     <ol>
         <li>회사는 제5조의 규정에 따라 이용계약이 완료된 회원에게 그 즉시 서비스를 이용할 수 있도록 합니다. 다만, 일부 서비스의 경우 회사의 필요에 따라 지정된 일자부터 서비스를 개시할 수 있습니다.</li>
         <li>회사는 회원에게 게임서비스를 제공할 때 이 약관에 정하고 있는 서비스를 포함하여 기타 부가적인 서비스를 함께 제공할 수 있습니다.</li>
         <li>회사는 회원의 등급을 구분하고 이용시간, 이용횟수, 제공 서비스의 범위 등을 세분화하여 이용에 차등을 둘 수 있습니다.</li>
     </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제12조 (서비스의 이용)</strong>
     <ol>
         <li>게임서비스는 회사의 영업방침에 따라 정해진 시간 동안 제공합니다. 회사는 게임서비스 제공시간을 게임 애플리케이션 초기화면이나 게임서비스 공지사항에 적절한 방법으로 안내합니다.</li>
@@ -215,16 +223,16 @@ hr {
         <li>다운로드하여 설치한 애플리케이션 또는 네트워크를 통해 이용하는 서비스의 경우에는 모바일 기기 또는 이동통신사의 특성에 맞도록 제공됩니다. 모바일 기기의 변경․번호 변경 또는 해외 로밍의 경우에는 콘텐츠의 전부 또는 일부의 이용이 불가능할 수 있으며, 이 경우 회사는 책임을 지지 않습니다.</li>
         <li>다운로드하여 설치한 애플리케이션 또는 네트워크를 통해 이용하는 서비스의 경우에는 백그라운드 작업이 진행될 수 있습니다. 이 경우 모바일 기기 또는 이동통신사의 특성에 맞도록 추가요금이 발생할 수 있으며 이와 관련하여 회사는 책임을 지지 않습니다.</li>
     </ol>
-</p>
-<p>
+</div>
+<div>
     <strong>제13조 (서비스의 변경 및 중단)</strong>
     <ol>
         <li>회사는 원활한 게임서비스 제공을 위해 운영상 또는 기술상의 필요에 따라 서비스를 변경할 수 있으며, 변경 전에 해당 내용을 게임서비스 내에 공지합니다. 다만, 버그․오류 등의 수정이나 긴급 업데이트 등 부득이하게 변경할 필요가 있는 경우 또는 중대한 변경에 해당하지 않는 경우에는 사후에 공지할 수 있습니다.</li>
         <li>회사는 영업양도․분할․합병 등에 따른 영업의 폐지, 게임제공의 계약만료, 당해 게임서비스의 현저한 수익 악화 등 경영상의 중대한 사유로 인해 게임서비스를 지속하기 어려운 경우에는 서비스 전부를 중단할 수 있습니다. 이 경우 중단일자 30일 이전까지 중단일자․중단사유․보상조건 등을 게임 애플리케이션 초기화면 또는 그 연결화면을 통해 공지하고 제27조 제1항의 방법으로 회원에게 통지합니다.</li>
         <li>제2항의 경우 회사는 사용하지 않았거나 사용기간이 남아 있는 유료 아이템에 대해 제24조 제3항에 따라 환급합니다.</li>
     </ol>
-</p>
-<p>
+</div>
+<div>
     <strong>제14조 (정보의 수집 등)</strong>
     <ol>
         <li>회사는 회원간에 이루어지는 채팅 내용을 저장․보관할 수 있으며 이 정보는 회사만이 보유합니다. 회사는 회원간의 분쟁 조정, 민원 처리 또는 게임 질서의 유지를 위한 경우에 한하여, 제3자는 법령에 따라 권한이 부여된 경우에 한하여 이 정보를 열람할 수 있습니다.</li>
@@ -232,17 +240,17 @@ hr {
         <li>회사는 서비스의 원활하고 안정적인 운영 및 서비스 품질의 개선을 위하여 회원의 개인정보를 제외한 회원의 모바일 기기 정보(설정,사양,운영체제, 버전 등)를 수집 ‧ 활용할 수 있습니다.</li>
         <li>회사는 서비스 개선 및 회원 대상 서비스 소개 등을 위한 목적으로 회원에게 추가정보를 요청할 수 있습니다. 이 요청에 대해 회원은 승낙하거나 거절할 수 있으며, 회사가 이 요청을 할 경우에는 회원이 이 요청을 거절할 수 있다는 뜻을 함께 고지합니다.</li>
     </ol>
-</p>
-<p>
+</div>
+<div>
     <strong>제15조 (광고의 제공)</strong>
     <ol>
         <li>회사는 서비스의 운영과 관련하여 게임서비스 내에 광고를 게재할 수 있습니다. 또한 수신에 동의한 회원에 한하여 전자우편, 문자서비스(LMS/SMS), 푸시메시지(Push Notification) 등의 방법으로 광고성 정보를 전송할 수 있습니다. 이 경우 회원은 언제든지 수신을 거절할 수 있으며, 회사는 회원의 수신 거절 시 광고성 정보를 발송하지 아니합니다.</li>
         <li>회사가 제공하는 서비스 중의 배너 또는 링크 등을 통해 타인이 제공하는 광고나 서비스에 연결될 수 있습니다.</li>
         <li>제2항에 따라 타인이 제공하는 광고나 서비스에 연결될 경우 해당 영역에서 제공하는 서비스는 회사의 서비스 영역이 아니므로 회사가 신뢰성, 안정성 등을 보장하지 않으며, 그로 인한 회원의 손해에 대하여도 회사는 책임을 지지 않습니다. 다만, 회사가 고의 또는 중과실로 손해의 발생을 용이하게 하거나 손해 방지를 위한 조치를 취하지 아니한 경우에는 그러하지 아니합니다.</li>
     </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제16조 (저작권 등의 귀속)</strong>
     <ol>
         <li>사가 제작한 게임서비스 내의 콘텐츠에 대한 저작권과 기타 지적재산권은 회사에 귀속합니다.</li>
@@ -258,17 +266,17 @@ hr {
         <li>회사가 운영하는 게시판 등에 게시된 정보로 인하여 법률상 이익이 침해된 회원은 회사에 해당 정보의 삭제 또는 반박 내용의 게재를 요청할 수 있습니다. 이 경우 회사는 신속하게 필요한 조치를 취하고 이를 신청인에게 통지합니다.</li>
         <li>이 조는 회사가 게임서비스를 운영하는 동안 유효하며, 회원 탈퇴 후에도 지속적으로 적용됩니다.</li>
     </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제17조 (유료 콘텐츠의 구매, 사용기간 및 이용)</strong>
 <ol>
     <li>게임서비스 내에서 회원이 구매한 유료 콘텐츠는 해당 애플리케이션을 다운로드 받거나 설치한 모바일 기기에서만 이용할 수 있습니다.</li>
     <li>회원이 구매한 유료 콘텐츠의 이용기간은 구매 시 명시된 기간에 따릅니다. 다만, 제13조 제2항에 따라 서비스 중단이 이루어지는 경우 기간의 정함이 없는 유료 콘텐츠의 이용기간은 서비스 중단 공지 시 공지된 서비스의 중단일자까지로 합니다.</li>
 </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제18조 (회원에 대한 서비스 이용제한)</strong>
 <ol>
     <li> 회원은 제10조에 따른 회원의 의무를 위반하는 행위를 하여서는 안 되며, 해당 행위를 하는 경우에 회사는 다음 각 호의 구분에 따른 회원의 서비스 이용제한, 관련 정보(글, 사진, 영상 등) 삭제 및 기타의 조치를 포함한 이용제한 조치를 할 수 있습니다. 이용제한 조치가 이루어지는 구체적인 사유 및 절차는 제19조 제1항에 따라 개별 게임의 운영정책에서 정합니다.
@@ -289,9 +297,9 @@ hr {
     </li>
     <li>제3항의 조사가 완료된 후, 유료 게임서비스의 경우에는 정지된 시간만큼 회원의 이용시간을 연장하거나 그에 상당하는 유료서비스 또는 캐쉬 등으로 보상합니다. 다만, 회원이 제3항 각 호의 사유에 해당하는 경우에는 그러하지 아니합니다.</li>
 </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제19조 (이용제한 조치의 사유와 절차)</strong>
 <ol>
     <li>회사는 제18조 제1항에 따른 이용제한 조치의 구체적인 사유 및 절차를 제10조 제1항에 따른 금지행위의 내용․정도․횟수․결과 등을 고려하여 운영정책으로 정합니다.</li>
@@ -303,30 +311,30 @@ hr {
         </ol>
     </li>
 </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제20조 (이용제한 조치에 대한 이의신청 절차) </strong>
 <ol>
     <li>회원이 회사의 이용제한 조치에 불복하고자 할 때에는 이 조치의 통지를 받은 날부터 14일 이내에 불복 이유를 기재한 이의 신청서를 서면, 전자우편 또는 이에 준하는 방법으로 회사에 제출하여야 합니다.</li>
     <li>회사는 제1항의 이의신청서를 접수한 날부터 15일 이내에 불복 이유에 대하여 서면, 전자우편 또는 이에 준하는 방법으로 답변합니다. 다만, 회사는 이 기간 내에 답변이 어려운 경우에는 그 사유와 처리일정을 통지합니다.</li>
     <li>회사는 불복 이유가 타당한 경우에는 이에 따른 조치를 취합니다.</li>
 </ol>
-</p>
+</div>
 
 <hr>
 
 <h2>제5장 청약철회, 과오납금의 환급 및 이용계약의 해지</h2>
 
-<p>
+<div>
     <strong>제21조 (대금결제)</strong>
 <ol>
     <li>콘텐츠에 대한 구매 대금의 부과와 납부는 원칙적으로 이동통신사나 오픈마켓 사업자 등에서 정하는 정책이나 방법에 따릅니다. 또한 각 결제수단별 한도가 회사나 오픈마켓 사업자가 정하는 정책 또는 정부의 방침에 따라 부여되거나 조정될 수 있습니다.</li>
     <li>콘텐츠의 구매대금을 외화로 결제하는 경우에는 환율‧수수료 등으로 인하여 실제 청구금액이 서비스의 상점 등에서 표시된 가격과 달라질 수 있습니다.</li>
 </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제22조 (청약 철회 등)</strong>
 <ol>
     <li>회사와 유료 콘텐츠의 구매에 관한 계약을 체결한 회원은 구매계약일과 콘텐츠 이용 가능일 중 늦은 날부터 7일 이내에 별도의 수수료‧위약금 등의 부담 없이 청약철회를 할 수 있습니다.</li>
@@ -344,9 +352,9 @@ hr {
     <li>미성년자가 모바일 기기에서 콘텐츠 구매계약을 체결하는 경우, 회사는 법정대리인의 동의가 없으면 미성년자 본인 또는 법정대리인이 그 계약을 취소할 수 있다는 내용을 고지하며, 미성년자가 법정대리인의 동의 없이 구매계약을 체결한 때에는 미성년자 본인 또는 법정대리인은 회사에 그 계약을 취소할 수 있습니다. 다만, 미성년자가 법정대리인이 범위를 정하여 처분을 허락한 재산으로 콘텐츠를 구매한 경우 또는 미성년자가 속임수로써 자기를 성년자로 믿게 하거나 법정대리인의 동의가 있는 것으로 믿게 한 경우에는 취소할 수 없습니다.</li>
     <li>콘텐츠 구매계약의 당사자가 미성년자인지 여부는 결제가 진행된 모바일 기기, 결제 실행자 정보, 결제 수단 명의자 등을 근거로 판단합니다. 또한 회사는 정당한 취소인지를 확인하기 위해 미성년자 및 법정대리인임을 증명할 수 있는 서류의 제출을 요청할 수 있습니다.</li>
 </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제23조 (과오납금의 환급)</strong>
 <ol>
     <li>회사는 과오납금이 발생하는 경우 과오납금을 회원에게 환급합니다. 다만, 과오납금이 회사의 고의 또는 과실 없이 회원의 과실로 인하여 발생한 경우에는 그 환급에 소요되는 실제 비용은 합리적인 범위 내에서 회원이 부담합니다.</li>
@@ -355,9 +363,9 @@ hr {
     <li>환급은 서비스를 이용하고 있는 모바일 기기의 운영체제 종류에 따라 각 오픈마켓 사업자 또는 회사의 환급정책에 따라 진행됩니다.</li>
     <li>회사는 과오납금의 환급을 처리하기 위해 회원에게서 제공받은 정보를 통해 회원에게 연락할 수 있으며, 필요한 정보의 제공을 요청할 수 있습니다. 회사는 회원으로부터 환급에 필요한 정보를 받은 날부터 3영업일 이내에 환급합니다.</li>
 </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제24조 (계약 해지 등)</strong>
 <ol>
     <li>회원은 언제든지 서비스 이용을 원하지 않는 경우 회원 탈퇴를 통해 이용계약을 해지할 수 있습니다. 회원탈퇴로 인해 회원이 게임서비스 내에서 보유한 게임이용정보는 모두 삭제되어 복구가 불가능하게 됩니다.</li>
@@ -365,20 +373,20 @@ hr {
     <li>제1항 및 제2항에 따른 환급 및 손해배상은 「콘텐츠이용자보호지침」에 따라 처리합니다.</li>
     <li>회사는 최근의 서비스 이용일부터 연속하여 1년 동안 회사의 서비스를 이용하지 않은 회원(이하 “휴면계정”이라 합니다)의 개인정보를 보호하기 위해 이용계약을 해지하고 회원의 개인정보 파기 등의 조치를 취할 수 있습니다. 이 경우 조치일 30일 전까지 계약해지, 개인정보 파기 등의 조치가 취해진다는 사실 및 파기될 개인정보 등을 회원에게 통지합니다.</li>
 </ol>
-</p>
+</div>
 
 <hr>
 
 <h2>제6장 손해배상 및 면책조항 등</h2>
-<p>
+<div>
     <strong>제25조 (손해배상)</strong>
     <ol>
         <li>회사 또는 회원은 본 약관을 위반하여 상대방에게 손해를 입힌 경우에는 그 손해를 배상할 책임이 있습니다. 다만, 고의 또는 과실이 없는 경우에는 그러하지 아니 합니다</li>
         <li>회사가 개별서비스 제공자와 제휴 계약을 맺고 회원에게 개별서비스를 제공하는 경우에 회원이 이 개별서비스 이용약관에 동의를 한 뒤 개별서비스 제공자의 고의 또는 과실로 인해 회원에게 손해가 발생한 경우에 그 손해에 대해서는 개별서비스 제공자가 책임을 집니다.</li>
     </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제26조 (회사의 면책)</strong>
 <ol>
     <li>사는 천재지변 또는 이에 준하는 불가항력으로 인하여 서비스를 제공할 수 없는 경우에는 서비스 제공에 관하여 책임을 지지 않습니다.</li>
@@ -394,28 +402,28 @@ hr {
     <li>회원이 회사가 제공하는 콘텐츠나 계정정보를 삭제한 경우 회사는 이에 대해 책임을 지지 않습니다. 다만, 회사의 고의 또는 과실에 의한 경우에는 그러하지 아니합니다.</li>
     <li>회사는 임시회원이 서비스 이용으로 발생한 손해에 대해서는 책임을 지지 않습니다. 다만, 회사의 고의 또는 과실에 의한 경우에는 그러하지 아니합니다.</li>
 </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제27조 (회원에 대한 통지) </strong>
 <ol>
     <li>회사가 회원에게 통지를 하는 경우 회원의 전자우편주소, 전자메모, 게임 서비스 내 쪽지, 문자메시지(LMS/SMS) 등으로 할 수 있습니다.</li>
     <li>회사는 회원 전체에게 통지를 하는 경우 7일 이상 게임서비스 내에 게시하거나 팝업화면 등을 제시함으로써 제1항의 통지에 갈음할 수 있습니다.</li>
 </ol>
-</p>
+</div>
 
-<p>
+<div>
     <strong>제28조 (재판권 및 준거법)</strong>
     이 약관은 대한민국 법률에 따라 규율되고 해석됩니다. 회사와 회원 간에 발생한 분쟁으로 소송이 제기되는 경우에는 법령에 정한 절차에 따른 법원을 관할 법원으로 합니다.
-</p>
+</div>
 
-<p>
+<div>
     <strong>제29조 (회원의 고충처리 및 분쟁해결)</strong>
     <ol>
         <li>회사는 회원의 편의를 고려하여 회원의 의견이나 불만을 제시하는 방법을 게임서비스 내 또는 그 연결화면에 안내합니다. 회사는 이러한 회원의 의견이나 불만을 처리하기 위한 전담인력을 운영합니다.</li>
         <li>회사는 회원으로부터 제기되는 의견이나 불만이 정당하다고 객관적으로 인정될 경우에는 합리적인 기간 내에 이를 신속하게 처리합니다. 다만, 처리에 장기간이 소요되는 경우에는 회원에게 장기간이 소요되는 사유와 처리일정을 게임서비스 내 공지하거나 제27조 제1항에 따라 통지합니다.</li>
         <li>회사와 회원 간에 분쟁이 발생하여 제3의 분쟁조정기관이 조정할 경우 회사는 이용제한 등 회원에게 조치한 사항을 성실히 증명하고, 조정기관의 조정에 따를 수 있습니다.</li>
     </ol>
-</p>
+</div>
 </body>
 </html>
